--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "aws-sdk": "^2.325.0",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
+    "mongodb": "^3.1.6",
     "popper.js": "^1.14.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
