--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.4.1",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
@@ -50,7 +50,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "nodemon": "^1.18.4",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.1",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
