--- a/package.json
+++ b/package.json
@@ -26,12 +26,22 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.4.1",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
     "font-awesome": "^4.7.0",
+    "http": "0.0.0",
+    "https": "^1.0.0",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
     "mongodb": "^3.1.6",
+    "mongoose": "^5.3.7",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "popper.js": "^1.14.4",
     "rxjs": "^5.5.6",
+    "url": "^0.11.0",
+    "uuid": "^3.3.2",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
