--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "nodemon ./middleware/server.js | ng serve",
+    "start": "nodemon ./middleware/app.js | ng serve",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "npm run deploy-ui && npm run deploy-express",
+    "deploy-ui": "sh ./deploy-ui.sh",
+    "deploy-express": "sh ./deploy-express.sh"
   },
   "private": true,
   "dependencies": {
@@ -22,9 +25,12 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "aws-sdk": "^2.325.0",
+    "aws-serverless-express": "^3.3.5",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
+    "claudia": "^5.1.2",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "font-awesome": "^4.7.0",
@@ -34,16 +40,13 @@
     "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
     "mongodb": "^3.1.6",
-    "mongoose": "^5.3.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1",
     "popper.js": "^1.14.4",
     "rxjs": "^5.5.6",
     "url": "^0.11.0",
     "uuid": "^3.3.2",
-    "zone.js": "^0.8.19",
-    "cors": "^2.8.4"
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.4",
