--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-font-awesome": "^3.1.2",
     "aws-sdk": "^2.325.0",
     "aws-serverless-express": "^3.3.5",
     "body-parser": "^1.18.3",
