--- a/package.json
+++ b/package.json
@@ -25,25 +25,25 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "angular-font-awesome": "^3.1.2",
-    "aws-sdk": "^2.325.0",
+    "aws-sdk": "^2.368.0",
     "aws-serverless-express": "^3.3.5",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
-    "claudia": "^5.1.2",
+    "claudia": "^5.2.0",
     "core-js": "^2.4.1",
-    "cors": "^2.8.4",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "font-awesome": "^4.7.0",
     "http": "0.0.0",
     "https": "^1.0.0",
     "jquery": "^3.3.1",
-    "jsonwebtoken": "^8.3.0",
+    "jsonwebtoken": "^8.4.0",
     "moment": "^2.22.2",
-    "mongodb": "^3.1.6",
+    "mongodb": "^3.1.10",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "popper.js": "^1.14.4",
+    "popper.js": "^1.14.6",
     "rxjs": "^5.5.6",
     "url": "^0.11.0",
     "uuid": "^3.3.2",
@@ -53,10 +53,10 @@
     "@angular/cli": "~1.7.4",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
+    "@types/jasmine": "^2.8.12",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^6.0.118",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
@@ -64,7 +64,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "nodemon": "^1.18.4",
+    "nodemon": "^1.18.7",
     "protractor": "^5.4.1",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
